# Stream-Deck-Firmeware

./: Cargo.toml
.github/workflows/: release.yml
src/: display.rs  icons.rs  keyboard.rs  leds.rs  main.rs  protocol.rs  state.rs  usb.rs  vibration.rs
src/inputs/: buttons.rs  debouncer.rs  encoders.rs  mod.rs
