[package]
edition = "2021"
name = "stream-deck-pico-firmeware"
version = "1.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico by default on this template
#rp-pico = "0.9"

embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

# embassy-executor bleibt bei diesen stabilen Werten
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }

# Zeitsteuerung und USB
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }

static_cell = "2.1.1"
smart-leds = "0.4.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"]}
postcard = "1.1.3"
embassy-sync = "0.8.0"
embassy-futures = "0.1.2"
embedded-storage = "0.3.1"
sequential-storage = { version = "7.2.0", features = ["postcard"] }
heapless = { version = "0.9.2", features = ["serde"] }
embedded-hal-async = "1.0.0"
usbd-hid = "0.10.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
